- Java 8 code update - Crypto and JMS plugins - Bug fixes